Went through each of the HTML, SCSS and JavaScript file and cleaned up some of the codes.

--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,10 @@
 							<h2 class="header2">For Any Requests or Questions, Please Fill In the Form, Below.</h2>
 						</div>
 						<ul class="contact-list d-none d-md-block">
-							<li>Please contact me by filling in the form</li>
-							<li>Ask me any questions that you have about the charities</li>
-							<li>Feel free to request an inclusion to the website of charities that you know</li>
-							<li>Receive a reply in under 24 hours</li>
+							<li>Please contact me by filling in the form.</li>
+							<li>Ask me any questions that you have about the charities.</li>
+							<li>Feel free to request an inclusion to the website of charities that you know.</li>
+							<li>Receive a reply within under 24 hours.</li>
 						</ul>
 					</div>
 				</div>
@@ -85,30 +85,30 @@
 								<div class="row">
 									<div class="forms center-form">
 										<input type="text" name="name" id="name" class="form-control text-box-length" placeholder="Name" maxlength="20" required />
-                                </div>
+                                    </div>
+								</div>
+								<div class="row">
+									<div class="forms center-form">
+										<input type="email" name="email" id="email" class="form-control text-box-length" placeholder="Email Address" required />
+                                    </div>
+								</div>
+								<div class="row">
+									<div class="forms center-form">
+										<textarea name="Message" id="contactMessage" class="form-control text-box-length" placeholder="Please Enter A Message" rows="5" required></textarea>
 									</div>
-									<div class="row">
-										<div class="forms center-form">
-											<input type="email" name="email" id="email" class="form-control text-box-length" placeholder="Email Address" required />
-                                </div>
-										</div>
-										<div class="row">
-											<div class="forms center-form">
-												<textarea name="Message" id="contactMessage" class="form-control text-box-length" placeholder="Please Enter A Message" rows="5" required></textarea>
-											</div>
-										</div>
+								</div>
 							</form>
 							<div class="container">
 								<div class="row">
 									<div class="formsSubmit center-form">
 										<input type="submit" value="Submit" id="submitBtn" />
-                                </div>
-									</div>
+                                    </div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+			</div>
 		</section>
 		<section class="contact-cta">
 			<div class="container-fluid">
