--- a/donate.html
+++ b/donate.html
@@ -90,7 +90,7 @@
         <section>
             <div class="container">
                 <h1 class="charitiesH1 text-center header">Charities</h1>
-                <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three of popular charity organisations are presented for each of the country that is below. Also, I do not provide donation services.</p>
+                <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three of popular charity organisations are presented for each of the countries that are below. Also, I do not provide donation services.</p>
                 <p class="donatePageTextColor text-center">A calculator can be used to calculate how much you would like to donate by clicking on the calculator icon in the sidebar on the left-hand side of the web page.</p>
             </div>
         </section>
@@ -100,7 +100,7 @@
             <div class="calculatorSection container">
                 <div class="justify-content-sm-center row">
                     <div class="col-12 text-center donatePageTextColor calcTextBG" id="calculatorSectionHeader">
-                        <h5>Click Here To Move and Calculate How Much You Would Like to Donate</h5>
+                        <h5>Click & Hold Here To Move. Calculate How Much You Would Like to Donate</h5>
                     </div>
                     <div class="col-12 calc-no-padding">  
                         <form>
@@ -183,7 +183,7 @@
                                         <p>
                                             The Muslim Global Relief has been awarded as the "Charity Of The Year 2018" by the National British Muslim Awards. Syria has been in war for years now and people are still dying and suffering everyday. This has caused 13.1 million of them to be in need,
                                             making it to the largest humanitarian crisis of all time. Eastern Ghouta has been lead to its near total destruction and 4,000,000 inhabitants are therefore suffering and unable too flee. At the same time, they
-                                            are at risk to be bombarded at any time and see people being crushed under heavy bricks! Through your donation, you be a helping hand to save lives!
+                                            are at risk to be bombarded at any time and see people being crushed under heavy bricks! Through your donation, you have a helping hand to save lives!
                                         </p>
                                         <a href="https://www.muslimglobalrelief.org/syria-emergency-appeal/?gclid=Cj0KCQjw3PLnBRCpARIsAKaUbgvUScWalFRhKSaO9QfHb4Yqc6ELL2ZnKetlWrllvhLzkHA6GlKolYoaAh5HEALw_wcB" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
@@ -200,7 +200,7 @@
                                     <div class="charity-text text-center">
                                         <h3>Save the Children</h3>
                                         <p>Indonesia has suffered a lot from earthquakes, tsunamis, volcanic eruptions, floods and political instability. The economy is struggling nad the poverty is widespreaded. Malnutrition causes tons of children to have
-                                            stunted growth, many of them die under the age of five and child labour is still going on there! However, you can make a change and help those children to have educations and have a better future ahead of them!</p>
+                                            stunted growth, many of them die under the age of five and child labour is still going on there! However, you can make a change and help those children to have educations and a better future ahead of them!</p>
                                         <a href="https://www.savethechildren.org/us/what-we-do/where-we-work/asia/indonesia" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
@@ -216,7 +216,7 @@
                                     <div class="charity-text text-center">
                                         <h3>SOS Childen's Villages International</h3>
                                         <p>Due to an unemployment rate of 70%, many people are caused to leave the country. The fact that Uzbekistan lost subsidies from Russia in 1991, caused their economy to decline drastically, as they are mostly based
-                                            on exporting cotton. Educational reforms have been processed vary slowly and children often have to quit school, in order to work in the agricultural areas. As a result, many Western clothes producers have decided
+                                            on exporting cotton. Educational reforms have been processed very slowly and children often have to quit school, in order to work in the agricultural areas. As a result, many Western cloth producers have decided
                                             to boycott cotton from there.
                                         </p>
 
@@ -236,7 +236,7 @@
                                     <div class="charity-text text-center">
                                         <h3>Muslim Global Relief</h3>
                                         <p>
-                                            The Muslim Global Relief has been awarded as the "Charity Of The Year 2018" by the National British Muslim Awards. With war and terrible human right abuses, Yemen looks like it is going to be in the worst humanitarian crisis in the last 50 years! Immediate
+                                            The Muslim Global Relief has been awarded as the "Charity Of The Year 2018" by the National British Muslim Awards. With war and terrible human right abuses, Yemen looks like it is going to be in the worst humanitarian crisis after the last 50 years! Immediate
                                             help is needed, as the poverty rate is high and millions of people's lives are at risk! You can help now!
                                         </p>
                                         <a href="https://www.muslimglobalrelief.org/yemen-appeal/?gclid=Cj0KCQjw3PLnBRCpARIsAKaUbgvNFvUQUUdqdHrAim-qYZFtI6PKp01Pg_wEmg5umdZLj-Z_PG3wj3waAkYiEALw_wcB" target="_blank" class="btn donateButtonStyle">Donate here</a>
@@ -288,7 +288,7 @@
                                     <div class="charity-text text-center">
                                         <h3>Caritas</h3>
                                         <p>This Catholic Church, helped people around the world and assists countries including Tajikistan. They even cleaned water for around 9000 people in Jomi, Tajikistan and provide medical help to children's hospitals.
-                                            Children with various illnesses, such as cancer, receiver their help and the Church aims to spread love, through their small projects.</p>
+                                            Children with various illnesses, such as cancer, receive their help and the Church aims to spread love, through their small projects.</p>
 
                                         <a href="https://www.caritas.org/where-caritas-work/asia/tajikistan/" target="_blank" class="btn donateButtonStyle">Donate here</a>
 
@@ -324,7 +324,7 @@
 
                                     <div class="charity-text text-center">
                                         <h3>Educate for Life</h3>
-                                        <p>This organisation helps Indians by building schools in rural areas and providing education, healthcare, and community work for them. To find out more and to donate please click on the button below.</p>
+                                        <p>This organisation helps Indians by building schools in rural areas and providing education, healthcare, and community work for them. To find out more and donate please click on the button below.</p>
                                         <a href="https://www.educateforlife.org.uk/?gclid=Cj0KCQjwov3nBRDFARIsANgsdoHuIokzfAvWhEunEczs1grnd4VH6rh0tflLgN2qm_stAsozX9pVWR8aApWpEALw_wcB" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
@@ -338,7 +338,6 @@
                     <div class="col-sm-6">
                         <div class="text-center donatePageTextColor">
                             <h2>Africa:</h2>
-
                         </div>
                         <div class="container-fluid">
                             <div class="row">
@@ -347,7 +346,7 @@
 
                                     <div class="charity-text text-center">
                                         <h3>Save the Children</h3>
-                                        <p>The Democratic Republic of Congo has the lowest GDP per capita, meaning that the standard of living of each citizen of the country is very low. The economic growth and development requires strong improvement, as
+                                        <p>The Democratic Republic of Congo has the lowest GDP per capita, meaning that the standard of living of their citizens country is very low. The economic growth and development requires strong improvement, as
                                             67% of girls cannot read or write, while 32% of children are engaged in childlabor! Overall, 87% of people in the Democratic Republic of Congo are under the poverty line. However, you can make a change by clicking
                                             the button below and donating any amount of money to hopefully change a person's life.</p>
                                         <a href="https://www.savethechildren.org/us/what-we-do/where-we-work/africa/democratic-republic-of-congo" target="_blank" class="btn donateButtonStyle">Donate here</a>
