--- a/map.html
+++ b/map.html
@@ -2,20 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!--Load hover.css-->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+		type="text/css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<!--Load hover.css-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
 		type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Charity Base: Map</title>
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+	<title>Charity Base: Map</title>
 </head>
 
 <body id="bodyColor">
-    <header>
+	<header>
 		<nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
 			<!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
@@ -47,83 +49,99 @@
 		</nav>
 	</header>
 
-    <article>
-        <!--Main Header and Description of the Web Page-->
-        <section>
-        <div class="container">
-            <div class="row">
-                <div class="mapInstruction text-center">
-                    <h1 class="header">Landmap</h1>
-                    <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
-                </div>
-            </div>
-        </div>
-        <!--World Map-->
-        <section>
-            <div id="map"></div>
-        </section>
-    </article>
+	<article>
+		<!--Main Header and Description of the Web Page-->
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="mapInstruction text-center">
+						<h1 class="header">Landmap</h1>
+						<h2>Use the map below, in order to have a general overview of what countries require help and
+							find quick information about them by clicking on the markers.</h2>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!--World Map-->
+		<section>
+			<div id="map"></div>
+		</section>
+	</article>
 
-    <aside>
-        <div>
-            <ul class="social-media-button d-none d-sm-block">
-                <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
-                <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
-                <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-        </div>
-    </aside>
+	<aside>
+		<div>
+			<ul class="social-media-button d-none d-sm-block">
+				<li class="facebook-aside"><a href="http://www.facebook.com" target="_blank"
+						class="facebook"><i class="fab fa-facebook"></i></a></li>
+				<li class="twitter-aside"><a href="http://www.twitter.com" target="_blank"
+						class="twitter"><i class="fab fa-twitter"></i></a></li>
+				<li class="youtube-aside"><a href="http://www.youtube.com" target="_blank"
+						class="youtube"><i class="fab fa-youtube"></i></a></li>
+				<li class="instagram-aside"><a href="http://www.instagram.com" target="_blank"
+						class="instagram"><i class="fab fa-instagram"></i></a></li>
+			</ul>
+		</div>
+	</aside>
 
 
-    <footer id="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-sm-6 text-center">
-                    <ul class="footer-list">
-                        <li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
-                        <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 text-center">
-                    <ul class="footer-list">
-                        <li><a href="donate.html" class="footer-link">Donate</a></li>
-                        <li><a href="map.html" class="footer-link">Map</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+	<footer id="footer">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12 col-sm-6 text-center">
+					<ul class="footer-list">
+						<li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
+						<li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
+					</ul>
+				</div>
+				<div class="col-12 col-sm-6 text-center">
+					<ul class="footer-list">
+						<li><a href="donate.html" class="footer-link">Donate</a></li>
+						<li><a href="map.html" class="footer-link">Map</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
-        <div class="d-block d-sm-none">
-            <hr>
+		<div class="d-block d-sm-none">
+			<hr>
 
-            <!--Footer Social Media Icons-->
+			<!--Footer Social Media Icons-->
 
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <ul class="social-media-icons-footer">
-                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12">
+						<ul class="social-media-icons-footer">
+							<li class="facebook-footer"><a href="http://www.facebook.com"
+									target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li class="twitter-footer"><a href="http://www.twitter.com"
+									target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li class="youtube-footer"><a href="http://www.youtube.com"
+									target="_blank"><i class="fab fa-youtube"></i></a></li>
+							<li class="instagram-footer"><a href="http://www.instagram.com"
+									target="_blank"><i class="fab fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiv48TxjG1G505RUOrZ3EJpIqBqpMGNcs&callback=initMap">
-    </script>
+	<script
+		src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+	</script>
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiv48TxjG1G505RUOrZ3EJpIqBqpMGNcs&callback=initMap">
+	</script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+	</script>
 
-    <script src="assets/js/map.js">
-    </script>
+	<script src="assets/js/map.js">
+	</script>
 </body>
 
 </html>
