Added descriptions of each image in the HTML codes for visually impaired users.

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="contact-cta">
+		<section class="contact-cta" title="Background picture of a child that looks sad and sits on the ground">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-12">
