--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 		<!--Section 1: Title Page-->
 
-		<section class="hpimg-1">
+		<section class="hpimg-1" title="A background picture of a child that looks sad and sits on the ground">
 			<div id="textEffect">
 				<div class="container-fluid">
 					<div class="row">
@@ -87,7 +87,7 @@
 
 		<!--Section 2: Poverty Trap-->
 
-		<section class="hpimg-2">
+		<section class="hpimg-2" title="A background picture of a child hugging another, while both of them are looking at the camera and standing in dirt">
 			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -106,7 +106,7 @@
 
 		<!--Section 3: The Struggle for Food and Health Care-->
 
-		<section class="hpimg-3">
+		<section class="hpimg-3" title="A background picture of three children with empty cups in their hands and standing by a wall, while looking sad">
 			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -126,7 +126,7 @@
 
 		<!--Section 4: Lowest Economic Outputs-->
 
-		<section class="hpimg-4">
+		<section class="hpimg-4" title="A background picture of a child that is so thin that its ribs can be seen, while it is surrounded by people">
 			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 mx-auto text-center">
@@ -151,7 +151,7 @@
 
 		<!--Section 5: Please Donate-->
 
-		<section class="hpimg-5">
+		<section class="hpimg-5" title="A background picture of a child that looks sad and sits on the ground">
 			<div class="container section">
 				<div class="row">
 					<div class="col-12">
