--- a/statistics.html
+++ b/statistics.html
@@ -60,7 +60,7 @@
 	<!--Main Header-->
 
 	<article>
-		<section id="statsBox">
+		<section id="statsBox" title="Grey banner picture of a child">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-12">
