The bug from the map that I thought, I had solved previously, still occured sometimes, so I added some new code into it to fix it, repositioned the script files in map.html for it and wrote about it in the README.md file.

--- a/map.html
+++ b/map.html
@@ -125,7 +125,7 @@
 			</div>
 		</div>
 	</footer>
-
+    <script src="assets/js/map.js"></script>
 	<script
 		src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
 	</script>
@@ -140,8 +140,8 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
 	</script>
 
-	<script src="assets/js/map.js">
-	</script>
+	
+	
 </body>
 
 </html>
