Improved some of the comments, some texts in the README.md file and some codes.

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,6 @@
             emailjs.init("user_jBNHynPWhUv5jwDizH0QT");
         })();
 	</script>
-
 	<title>Charity Base: Contact Page</title>
 </head>
 
@@ -62,6 +61,7 @@
 		</nav>
 	</header>
 	<article>
+        <!-- Contact form for users to contact the developer -->
 		<section>
 			<div class="container text-center contactWrap">
 				<div class="row">
@@ -110,6 +110,7 @@
 				</div>
 			</div>
 		</section>
+        <!-- Call to action section to lead users to the donation page for them to donate to charities -->
 		<section class="contact-cta" title="Background picture of a child that looks sad and sits on the ground">
 			<div class="container-fluid">
 				<div class="row">
@@ -125,7 +126,7 @@
 		</section>
 	</article>
 
-
+    <!-- Aside bar -->
 	<aside>
 		<div>
 			<ul class="social-media-button d-none d-sm-block">
@@ -141,7 +142,7 @@
 		</div>
 	</aside>
 
-
+    <!-- Footer -->
 	<footer id="footer">
 		<div class="container-fluid">
 			<div class="row">
