--- a/donate.html
+++ b/donate.html
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-
+        <!-- Main Heading and information of the web page -->
         <section>
             <div class="container">
                 <h1 class="charitiesH1 text-center header">Charities</h1>
@@ -822,7 +822,7 @@
             </div>
         </section>
     </article>
-
+    <!-- Aside -->
     <aside>
         <div>
             <ul class="social-media-button d-none d-sm-block">
@@ -835,7 +835,7 @@
         </div>
     </aside>
 
-
+    <!-- Footer -->
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
