--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
 	<!--Load hover.css-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
 		type="text/css" />
-
 	<!--Load CSS File-->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
@@ -166,7 +164,7 @@
 		</section>
 	</article>
 
-
+    <!-- Aside bar -->
 	<aside>
 		<div>
 			<ul class="social-media-button d-none d-sm-block">
@@ -182,7 +180,7 @@
 		</div>
 	</aside>
 
-
+    <!-- Footer -->
 	<footer id="footer">
 		<div class="container-fluid">
 			<div class="row">
