--- a/map.html
+++ b/map.html
@@ -12,6 +12,7 @@
 	<!--Load hover.css-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
 		type="text/css" />
+    <!--Load CSS File-->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<title>Charity Base: Map</title>
 </head>
@@ -67,7 +68,7 @@
 			<div id="map"></div>
 		</section>
 	</article>
-
+    <!-- Aside bar -->
 	<aside>
 		<div>
 			<ul class="social-media-button d-none d-sm-block">
@@ -83,7 +84,7 @@
 		</div>
 	</aside>
 
-
+    <!-- Footer -->
 	<footer id="footer">
 		<div class="container-fluid">
 			<div class="row">
