--- a/statistics.html
+++ b/statistics.html
@@ -11,10 +11,10 @@
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
 		type="text/css" />
+    <!--Load DC CSS-->
 	<link rel="stylesheet" href="assets/css/dc.min.css" type="text/css" />
+    <!--Load CSS File-->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
-
-
 	<title>Charity Base: Statistics Page</title>
 
 </head>
@@ -58,7 +58,6 @@
 	</header>
 
 	<!--Main Header-->
-
 	<article>
 		<section id="statsBox" title="Grey banner picture of a child">
 			<div class="container-fluid">
@@ -313,7 +312,7 @@
 			</div>
 		</section>
 	</article>
-
+    <!-- Aside bar -->
 	<aside>
 		<div>
 			<ul class="social-media-button d-none d-sm-block">
@@ -329,7 +328,7 @@
 		</div>
 	</aside>
 
-
+    <!-- Footer -->
 	<footer id="footer">
 		<div class="container-fluid">
 			<div class="row">
